test/files/neg/t9127.scala

trait X {
  val s = "hello"
  val t = "$s"
  val u = "a${s}b"
  val v = "a$s b"
}
